--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+header {
+  background: #6200EE;
+  padding: 12px;
   color: white;
+  display: flex;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+
+header h1 {
+  font-size: 20px;
+  font-weight: 200;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background: #04a504;
+  color: white;
+  border: 0;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 2px 30px;
+}
+
+.search {
+  display: flex;
+}
+
+.search input {
+  width: 13em;
+  margin-right: 5px;
+}
+
+.map {
+  background-color: #8b8b8b;
+  height: calc(100vh - 48px);
 }
